--- a/느낀점.md
+++ b/느낀점.md
@@ -2,7 +2,8 @@
 
 ## 잘한점
 - 배경화면이미지를 자바스크립트로 띄었는데 배경이미지코드가 z-index최고 상단에 있어서 다른 것들이 클릭이 되지 않았습니다.. 그래서 z-index로 계속 해결하려고 시도했으나 위치선정문제가 계속 일어나서 생각을 계속하다가 이미지가 계속 클릭이 먼저되니까 이미지를 클릭 못하게 하면 되지 않을까? 해서 검색을 통해 pointer-events: none이라는 아주 좋은 코드를 발견하였습니다. 
-- 저번에 카카오클론하며 배운 CSS들을 잘 활용한 점들이 잘한것같습니다. 
+- 저번에 카카오클론하며 배운 CSS들을 잘 활용한 점들이 잘한것같습니다.
+- 리스트목록에 갯수 제한을 걸어서 일정갯수 이상이면 박스안에서 스크롤할수있도록 기능을 추가한점이 잘한것같습니다. 이 기능이 없으면 갯수가 화면을 뚫고 넘어가는 현상을 발생시킵니다. 
 - height를 잘 조절해서 전체화면에서 빈여백없이 모든 화면에서 잘 구현되도록 만들었습니다. 
 - 스크롤기능이 살아있으면 사용자가 height를 작게 만들고 스크롤해서 아래로 내리면 배경이미지 밖으로 content들이 짤리는 현상이 발생하여 제가 할수있는 최선의 선택 스크롤기능을 없어지게하여 문제점을 보완하였습니다. 
 
